--- a/src/BrightstarDB.Models.EventFeed/BrightstarDB.Models.EventFeedTests/BrightstarDB.Models.EventFeedTests.csproj
+++ b/src/BrightstarDB.Models.EventFeed/BrightstarDB.Models.EventFeedTests/BrightstarDB.Models.EventFeedTests.csproj
@@ -37,6 +37,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\BrightstarDB\SDK\NET40\BrightstarDB.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
